--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li class="nav-item"><a href="#products" class="nav-link clr-transition">Product</a></li>
             <li class="nav-item"><a href="#" class="nav-link clr-transition">About</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link clr-transition">Contact</a></li>
+            <li class="nav-item"><a href="#contact" class="nav-link clr-transition">Test</a></li>
           </ul>
         </nav>
 
